funkcionalnost oko tickera i ispravljeni marzni racuni